--- a/index.html
+++ b/index.html
@@ -11,8 +11,27 @@
 		<p class="label">Click on the button to copy the text from the text field.</p>
 		
 		<div class="container">
-		<textarea class="CopyText" id="Text1" readonly>Text Here</textarea>
+		<textarea class="CopyText" id="Text1" readonly>Hi there! Sorry, but this studio is for FPC applications only. If you wish to advertise, please only do so in the Show and Tell forums here: https://scratch.mit.edu/discuss/8/ Thanks!</textarea>
 		<button onclick="myFunction(1)">Copy Text</button>
+		<br>
+		<br>
+		</div>
+		<div class="container">
+		<textarea class="CopyText" id="Text2" readonly>Hi there! Your application is missing several required criteria in order for it to be added. Please fully read the instructions project here: https://scratch.mit.edu/projects/19791305 before applying :)</textarea>
+		<button onclick="myFunction(2)">Copy Text</button>
+		<br>
+		<br>
+		</div>
+		</div>
+		<div class="container">
+		<textarea class="CopyText" id="Text3" readonly>Hello! ^u^ You forgot to include a "which types of projects you like" section. Please answer in your application project which types of projects you would curate :)</textarea>
+		<button onclick="myFunction(3)">Copy Text</button>
+		<br>
+		<br>
+		</div>
+	        <div class="container">
+		<textarea class="CopyText" id="Text4" readonly>Your application contains everything that is needed, but you don't have a sample studio. Please make a sample studio, which is a studio containing 5 to 7 examples of projects you would curated if you were FPC.</textarea>
+		<button onclick="myFunction(4)">Copy Text</button>
 		<br>
 		<br>
 		</div>
