--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<title>QuickReply</title>
+		<title>Replies</title>
 		<link rel="shortcut icon" type="image/png" href="/favicon.png"><!-- Favicon -->
 		<link rel="stylesheet" type="text/css" href="stylesheet.css"><!-- Stylesheet -->
 	</head>
@@ -32,6 +32,13 @@
 	        <div class="container">
 		<textarea class="CopyText" id="Text4" readonly>Your application contains everything that is needed, but you don't have a sample studio. Please make a sample studio, which is a studio containing 5 to 7 examples of projects you would curated if you were FPC.</textarea>
 		<button onclick="myFunction(4)">Copy Text</button>
+		<br>
+		<br>
+		</div>
+	        </div>
+	        <div class="container">
+		<textarea class="CopyText" id="Text5" readonly>Hi - please read the instructions project here: https://scratch.mit.edu/projects/19791305 before applying.</textarea>
+		<button onclick="myFunction(5)">Copy Text</button>
 		<br>
 		<br>
 		</div>
