--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 	<head>
 		<title>Replies</title>
-		<link rel="shortcut icon" type="image/png" href="/favicon.png"><!-- Favicon -->
+		<link rel="shortcut icon" type="image/png" href="/fpcar-favicon2.png"><!-- Favicon -->
 		<link rel="stylesheet" type="text/css" href="stylesheet.css"><!-- Stylesheet -->
 	</head>
 	
