--- a/index.html
+++ b/index.html
@@ -1,14 +1,14 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<title>Replies</title>
-		<link rel="shortcut icon" type="image/png" href="/fpcar-favicon2.png"><!-- Favicon -->
-		<link rel="stylesheet" type="text/css" href="stylesheet.css"><!-- Stylesheet -->
+		<title>Scratch replies</title>
 	</head>
 	
 	<body style= "margin:0">
 	
 		<p class="label">Click on the button to copy the text from the text field.</p>
+		<br>
+		<h1>FPCA</h1>
 		
 		<div class="container">
 		<textarea class="CopyText" id="Text1" readonly>Hi there! Sorry, but this studio is for FPC applications only. If you wish to advertise, please only do so in the Show and Tell forums here: https://scratch.mit.edu/discuss/8/ Thanks!</textarea>
@@ -39,6 +39,19 @@
 	        <div class="container">
 		<textarea class="CopyText" id="Text5" readonly>Hi - please read the instructions project here: https://scratch.mit.edu/projects/19791305 before applying.</textarea>
 		<button onclick="myFunction(5)">Copy Text</button>
+		<br>
+		<br>
+		</div>
+                <h1>SWC</h1>
+                <div class="container">
+		<textarea class="CopyText" id="Text6" readonly>Hi there! ^^ I'm a reviewer of the SWC, and will be reviewing your project so that it can be added to the main studio.</textarea>
+		<button onclick="myFunction(6)">Copy Text</button>
+		<br>
+		<br>
+		</div>
+                <div class="container">
+		<textarea class="CopyText" id="Text7" readonly>Removed as this doesn't seem to be a welcoming project, sorry. If you'd like to advertise, please only do so in the Show and Tell forums here: https://scratch.mit.edu/discuss/8/ :) </textarea>
+		<button onclick="myFunction(7)">Copy Text</button>
 		<br>
 		<br>
 		</div>
