--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 		<title>Scratch replies</title>
 	</head>
 	
-	<body style= "margin:0">
+	<body style= "margin:10px">
 	
 		<p class="label">Click on the button to copy the text from the text field.</p>
 		<br>
