--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
 	<head>
 		<title>Scratch replies</title>
+		<link rel="stylesheet" href="stylesheets.css">
 	</head>
 	
 	<body style= "margin:10px">
