--- a/index.html
+++ b/index.html
@@ -5,11 +5,9 @@
 		<link rel="stylesheet" href="stylesheets.css">
 	</head>
 	
-	<body style= "margin:10px">
+	<body>
 	
-		<p class="label">Click on the button to copy the text from the text field.</p>
-		<br>
-		<h1><abbr title="Front Page Curator Applications">FPCA</abbr></h1>
+		<a href="https://scratch.mit.edu/studios/386359/" class="ScratchLink"><h1 title="Front Page Curator Applications">FPCA</h1></a>
 		
 		<div class="container">
 		<textarea class="CopyText" id="Text1" readonly>Hi there! Sorry, but this studio is for FPC applications only. If you wish to advertise, please only do so in the Show and Tell forums here: https://scratch.mit.edu/discuss/8/ Thanks!</textarea>
@@ -43,7 +41,7 @@
 		<br>
 		<br>
 		</div>
-                <h1><abbr title="Scratch Welcoming Committee">SWC</abbr></h1>
+                <a href="https://scratch.mit.edu/studios/4276585/" class="ScratchLink"><h1 title="Scratch welcoming committee">SWC</h1></a>
                 <div class="container">
 		<textarea class="CopyText" id="Text6" readonly>Hi there! ^^ I'm a reviewer of the SWC, and will be reviewing your project so that it can be added to the main studio.</textarea>
 		<button onclick="myFunction(6)">Copy Text</button>
