--- a/index.html
+++ b/index.html
@@ -23,34 +23,21 @@
 		</div>
 		</div>
 		<div class="container">
-		<textarea class="CopyText" id="Text3" readonly>Hello! ^u^ You forgot to include a "which types of projects you like" section. Please answer in your application project which types of projects you would curate :)</textarea>
+		<textarea class="CopyText" id="Text3" readonly>Hello! ^^ You forgot to include a "which types of projects you like" section. Please answer in your application project which types of projects you would curate :)</textarea>
 		<button onclick="myFunction(3)">Copy Text</button>
-		<br>
-		<br>
-		</div>
-	        <div class="container">
-		<textarea class="CopyText" id="Text4" readonly>Your application contains everything that is needed, but you don't have a sample studio. Please make a sample studio, which is a studio containing 5 to 7 examples of projects you would curated if you were FPC.</textarea>
-		<button onclick="myFunction(4)">Copy Text</button>
-		<br>
-		<br>
-		</div>
-	        </div>
-	        <div class="container">
-		<textarea class="CopyText" id="Text5" readonly>Hi - please read the instructions project here: https://scratch.mit.edu/projects/19791305 before applying.</textarea>
-		<button onclick="myFunction(5)">Copy Text</button>
 		<br>
 		<br>
 		</div>
                 <a href="https://scratch.mit.edu/studios/4276585/" class="ScratchLink"><h1 title="Scratch welcoming committee">SWC</h1></a>
                 <div class="container">
 		<textarea class="CopyText" id="Text6" readonly>Hi there! ^^ I'm a reviewer of the SWC, and will be reviewing your project so that it can be added to the main studio.</textarea>
-		<button onclick="myFunction(6)">Copy Text</button>
+		<button onclick="myFunction(4)">Copy Text</button>
 		<br>
 		<br>
 		</div>
                 <div class="container">
 		<textarea class="CopyText" id="Text7" readonly>Removed as this doesn't seem to be a welcoming project, sorry. If you'd like to advertise, please only do so in the Show and Tell forums here: https://scratch.mit.edu/discuss/8/ :) </textarea>
-		<button onclick="myFunction(7)">Copy Text</button>
+		<button onclick="myFunction(5)">Copy Text</button>
 		<br>
 		<br>
 		</div>
