--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 		</div>
                 <a href="https://scratch.mit.edu/studios/4276585/" class="ScratchLink"><h1 title="Scratch welcoming committee">SWC</h1></a>
                 <div class="container">
-		<textarea class="CopyText" id="Text4" readonly>Hi there! ^^ I'm a reviewer of the SWC, and will be reviewing your project so that it can be added to the main studio.</textarea>
+		<textarea class="CopyText" id="Text4" readonly>Hi there! ^^ I'm a reviewer of the @welcomingcommittee, and will be reviewing your project so that it can be added to the main studio.</textarea>
 		<button onclick="myFunction(4)">Copy Text</button>
 		<br>
 		<br>
@@ -38,6 +38,12 @@
                 <div class="container">
 		<textarea class="CopyText" id="Text5" readonly>Removed as this doesn't seem to be a welcoming project, sorry. If you'd like to advertise, please only do so in the Show and Tell forums here: https://scratch.mit.edu/discuss/8/ :) </textarea>
 		<button onclick="myFunction(5)">Copy Text</button>
+		<br>
+		<br>
+		</div>
+                <div class="container">
+		<textarea class="CopyText" id="Text6" readonly>Hi there! :) It seems you are no longer working on your welcoming project. But that's okay! I'll remove your project from the "reviewing" studio for now, feel free to add it back to the submissions studio here: https://scratch.mit.edu/studios/4276585/ once you think you're ready again. Have a good day! :D</textarea>
+		<button onclick="myFunction(6)">Copy Text</button>
 		<br>
 		<br>
 		</div>
