--- a/index.html
+++ b/index.html
@@ -47,6 +47,12 @@
 		<br>
 		<br>
 		</div>
+	        <div class="container">
+		<textarea class="CopyText" id="Text7" readonly>Hello! Thanks for making a project for the Welcoming Committee! :D However, you must wait until you obtain the "Scratcher" status before submitting a welcoming project, as it is for welcoming new scratchers. However, you can still help out by welcoming other people in the main studio! :) Feel free to re-add or make a new project and submit it in the submissions studio here: https://scratch.mit.edu/studios/4276585/ once you've obtained the "scratcher" status! :)</textarea>
+		<button onclick="myFunction(7)">Copy Text</button>
+		<br>
+		<br>
+		</div>
 
 		<script>
 			function myFunction(area) {
