--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 		</div>
                 <a href="https://scratch.mit.edu/studios/4276585/" class="ScratchLink"><h1 title="Scratch welcoming committee">SWC</h1></a>
                 <div class="container">
-		<textarea class="CopyText" id="Text4" readonly>Hi there! ^^ I'm a reviewer of the @welcomingcommittee, and will be reviewing your project so that it can be added to the main studio.</textarea>
+		<textarea class="CopyText" id="Text4" readonly>Hi there! ^^ I'm a reviewer of the Scratch Welcoming Committee, and will be reviewing your project so that it can be added to the main studio.</textarea>
 		<button onclick="myFunction(4)">Copy Text</button>
 		<br>
 		<br>
